<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/iv_logo"
            android:id="@+id/iv_Logo"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_Silahkan"
            android:layout_below="@+id/iv_Logo"
            android:textAlignment="center"
            android:text="@string/silahkan_login"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_username"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="text"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_person"
            android:layout_below="@+id/tv_Silahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_password"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_lock"
            android:layout_below="@+id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/sign_in"
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btn_Login"
            android:layout_below="@+id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_createAccount"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@+id/btn_Login"
            android:text="@string/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </RelativeLayout>

</LinearLayout>